# fate

./: .gitignore  CMakeLists.txt  README.md  cli.cpp  main.cpp
resources-build/: app_icon.rc
resources/Models/damagedhelmet/: license.txt
resources/Models/mercevo2/: license.txt
resources/ProjectTemplates/Default/: {{ProjectName}}.csproj  {{ProjectName}}.slnx
resources/Shaders/: lit.frag  lit.vert  shader.slang
resources/Textures/Skyboxes/canary_wharf_8k/: license.txt
src/: CubemapData.h  Engine.cpp  Engine.h  FateEngine.cpp  FateEngine.h  FateRenderer.cpp  FateRenderer.h  GPUMeshHandle.h  IndexAllocator.cpp  IndexAllocator.h  Material.h  Mesh.cpp  Mesh.h  MeshHandle.cpp  MeshHandle.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneTransform.cpp  SceneTransform.h  TextureData.h  Vertex.cpp  Vertex.h  main.cpp
src/shaders/: lit.slang  skybox.slang
src/shaders/lib/: PBRUtils.slang  TonemappingUtils.slang
src/util/: Utils.cpp  Utils.h
src/utils/: Files.cpp  Files.h  Paths.cpp  Paths.h
